--- a/careers.html
+++ b/careers.html
@@ -127,8 +127,8 @@
                 <div class="panel">
                     <h4>Start your career with...</h4>
                     <ul class="list-unstyled list-spaces">
-                        <li><a href="./courses.html">Understanding Federal Loopholes</a><br>
-                            <span class="small text-muted">Structure your finances the smart way.</span></li>
+                        <li><a href="./courses.html">How To Structure Your Organization</a><br>
+                            <span class="small text-muted">Manage your finances the smart way.</span></li>
                         <li><a href="./courses.html">Student Recruitment Strategies</a><br>
                             <span class="small text-muted">Build a consumer base for your enterprise in no time!</span></li>
                         <li><a href="./courses.html">Policy Protection</a><br>
