--- a/courses.html
+++ b/courses.html
@@ -63,11 +63,8 @@
 					<div class="featured-box">
 						<i class="fa fa-gavel fa-2x"></i>
 						<div class="text">
-							<h3>Understanding Federal Loopholes</h3>
-							The federal government assists students by providing loans with public money. This course will teach you how to structure your finances to capture the largest amount of public funds.
-							<br><br>
-							It will also cover renaming your organization to avoid discreditation. <a href="namegen.html">Click here for a handy tool</a> to explore school name possibilities!
-							<br>&nbsp;
+							<h3>How To Structure Your Organization</h3>
+							It is important to understand how to economically structure your for-profit college. Average non-profit institutions spend too much and the individual student. The student should be viewed as a customer and not a learner. Similarly, faculty can be paid on part-time basis and be hired as ‘moonlighters’ from traditional universities. This frees up funding for recruitment personnel, administration, and board members - to maximize capital gain.  
 						</div>
 					</div>
 				</div>
@@ -77,10 +74,9 @@
 						<div class="text">
 							<h3>Technical "Compliance"</h3>
 							All states require schools to reveal graduation rates and job data. But don’t worry-- in this class we’ll cover the nuances of “clearly and conspicuously,” and exactly where to hide a non-searchable PDF of this information on your websites.
-							<br>&nbsp;
-							<br>&nbsp;
-							<br>&nbsp;
-							<br>&nbsp;
+							<br><br>
+
+							It will also cover renaming your organization to avoid discreditation. <a href="namegen.html">Click here for a handy tool</a> to explore school name possibilities!
 							<br>&nbsp;
 						</div>
 					</div>
@@ -91,6 +87,7 @@
 						<div class="text">
 							<h4>Policy Protection: Working with Lobbyists to Safeguard Your New Industry</h4>
 							Brand New! This course will teach you how to work with local politicians and lobbyist groups, including the ASPCU (Association of Private Sector Colleges and Universities) to ensure that federal and state regulations are working in your favor. This course is especially useful for students who want to develop a long-term investment strategy in For-Profit Education. 
+							<br>&nbsp;
 						</div>
 					</div>
 				</div>
