--- a/courses.html
+++ b/courses.html
@@ -57,7 +57,7 @@
 	</header>
 	<div id="courses">
 		<section class="container">
-			<h2>Online Courses</h2>
+			<h2>Our Comprehensive Curriculum</h2>
 			<div class="row">
 				<div class="col-md-4">
 					<div class="featured-box">
@@ -86,7 +86,7 @@
 						<i class="fa fa-university fa-2x"></i>
 						<div class="text">
 							<h4>Policy Protection: Working with Lobbyists to Safeguard Your New Industry</h4>
-							Brand New! This course will teach you how to work with local politicians and lobbyist groups, including the ASPCU (Association of Private Sector Colleges and Universities) to ensure that federal and state regulations are working in your favor. This course is especially useful for students who want to develop a long-term investment strategy in For-Profit Education. 
+							Brand New! This course will teach you how to work with local politicians and lobbyist groups, including the APSCU (Association of Private Sector Colleges and Universities) to ensure that federal and state regulations are working in your favor. This course is especially useful for students who want to develop a long-term investment strategy in For-Profit Education. 
 							<br>&nbsp;
 						</div>
 					</div>
