cc and name link

--- a/contact.html
+++ b/contact.html
@@ -137,7 +137,8 @@
 								<a href="courses.html">Courses</a> |
 								<a href="aid.html">Financial Aid</a> |
 								<a href="why.html">Why For-Profit</a> |
-								<a href="contact.html">Contact</a>
+								<a href="contact.html">Contact</a> |
+								<a href="namegen.html">Name Generator</a>
 							</p>
 						</div>
 					</div>
@@ -145,7 +146,7 @@
 					<div class="col-md-6 panel">
 						<div class="panel-body">
 							<p class="text-right">
-								Copyright &copy; 2014. Template by <a href="http://webthemez.com/" rel="develop">WebThemez.com</a>
+								<a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/80x15.png" /></a> Template by <a href="http://webthemez.com/" rel="develop">WebThemez.com</a>
 							</p>
 						</div>
 					</div>
